Add functionality for an admin to add and edit product information
