# src/routes/products.js
@@ -3,6 +3,24 @@ const products = require('../db/db').products;
 
 const productsRouter = express.Router();
 
+function verifyIsAdmin(req, res, next) {
+    if(req.user.role != 'admin') {
+        const error = new Error("You do not have permission to do that!");
+        error.status = 403;
+        return next(error);
+    }
+    next();
+}
+
+function verifyUserLoggedIn(req, res, next) {
+    if(!req.user) {
+        const error = new Error("Please log in!");
+        error.status = 401;
+        return next(error);
+    }
+    next();
+}
+
 productsRouter.get('/', async (req, res, next) => {
     //Implement Get to search for products
 
@@ -29,6 +47,21 @@ productsRouter.get('/', async (req, res, next) => {
     });
 });
 
+productsRouter.post('/', [verifyUserLoggedIn, verifyIsAdmin], (req, res, next) => {
+    const {quantity = 0, category_ids = [], ...product} = req.body;
+
+    if(!product.name || !product.price) {
+        const error = new Error('Please fill in all required fields!');
+        error.status = 400;
+        return next(error);
+    }
+
+    products.addProductToDatabase(product, quantity, category_ids, (err, results) => {
+        if(err) return next(err);
+        res.json(results);
+    })
+});
+
 productsRouter.get('/:productId', (req, res, next) => {
     const productId = Number(req.params.productId);
     if(!productId) {
@@ -36,11 +69,26 @@ productsRouter.get('/:productId', (req, res, next) => {
         error.status = 400;
         return next(error);
     }
-    const results = products.findProductsById(productId, (err, results) => {
+
+    products.findProductsById(productId, (err, results) => {
         if(err) return next(err);
             res.json(results);
     });
 });
+
+productsRouter.patch('/:productId', (req, res, next) => {
+    const productId = Number(req.params.productId);
+    if(!productId) {
+        const error = new Error('Please input a number for Product ID');
+        error.status = 400;
+        return next(error);
+    }
+
+    products.editProductById(productId, req.body, (err, results) => {
+        if(err) return next(err);
+            res.json(results);
+    })
+})
 
 
 module.exports = productsRouter;
